--- a/public/html/signup.html
+++ b/public/html/signup.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 	<title> Post</title>
-  <link rel="stylesheet" href="../css/resets.css" type="text/css">
-	<link rel="stylesheet" href="../css/signup.css" type="text/css">
+  <link rel="stylesheet" href="/public/css/resets.css" type="text/css">
+	<link rel="stylesheet" href="/public/css/signup.css" type="text/css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
