--- a/public/html/signup.html
+++ b/public/html/signup.html
@@ -21,25 +21,25 @@
 
   	<div class="row">
   <div id="login">
-  <form>
+  <form action="/postSignUp" method="post" >
   <div class="form-group">
   <label class="user"> UserName  </label>
   <div class="input-group">
-  <input type="text" class="form-control" id="text1" name="tl" placeholder="username">
+  <input type="text" class="form-control" id="text1" name="name" placeholder="username">
   </div>
   </div>
 
   <div class="form-group">
   <label class="user"> email  </label>
   <div class="input-group">
-  <input type="text" class="form-control" id="text2" name="tl" placeholder="email">
+  <input type="email" class="form-control" id="text2" name="email" placeholder="email">
   </div>
   </div>
 
   <div class="form-group">
   <label class="user"> Password </label>
   <div class="input-group">
-  <input type="text" class="form-control" id="text3" name="tl" placeholder=" Enter Password">
+  <input type="text" class="form-control" id="text3" name="psw" placeholder=" Enter Password">
   </div>
   </div>
   <div class="form-group">
