--- a/public/html/login.html
+++ b/public/html/login.html
@@ -21,18 +21,18 @@
 
   	<div class="row">
   <div id="login">
-  <form>
+  <form action="/postLogin" method="post">
   <div class="form-group">
   <label class="user"> UserName  </label>
   <div class="input-group">
-  <input type="text" class="form-control" id="text1" name="tl" placeholder="username">
+  <input type="text" class="form-control" id="text1" name="name" placeholder="username">
   </div>
   </div>
 
   <div class="form-group">
   <label class="user"> Password </label>
   <div class="input-group">
-  <input type="text" class="form-control" id="text2" name="tl" placeholder=" Enter Password">
+  <input type="text" class="form-control" id="text2" name="pass" placeholder=" Enter Password">
   </div>
   </div>
   <div class="form-group">
