--- a/public/html/post.html
+++ b/public/html/post.html
@@ -28,7 +28,7 @@
                   <div class="form-group">
                      <label class="user"> Password </label>
                      <div class="input-group">
-                        <input type="text" class="form-control" id="text2" name="pass" placeholder=" Enter Password">
+                        <input type="password" class="form-control" id="text2" name="pass" placeholder=" Enter Password">
                      </div>
                   </div>
                   <div class="form-group">
