--- a/public/html/signup.html
+++ b/public/html/signup.html
@@ -34,7 +34,7 @@
                   <div class="form-group">
                      <label class="user"> Password </label>
                      <div class="input-group">
-                        <input type="text" class="form-control" id="text3" name="psw" placeholder=" Enter Password">
+                        <input type="password" class="form-control" id="text3" name="psw" placeholder=" Enter Password">
                      </div>
                   </div>
                   <div class="form-group">
