change in signup file

--- a/public/html/signup.html
+++ b/public/html/signup.html
@@ -15,7 +15,7 @@
          <br/>
          <br/>
          <br/>
-         <center> <b id="login-name">LOGIN Here </b> </center>
+         <center> <b id="login-name">SIGNUP Here </b> </center>
          <div class="row">
             <div id="login">
                <form action="/postSignUp" method="post" >
